# JEQDSK

./: LICENSE  README.md  jeqdsk.py  project.toml  pyproject.toml
data/: diiid.geqdsk  diiid.jeqdsk  diiid_new.geqdsk  diiid_new.jeqdsk
data/old/: diiid_new.geqdsk  diiid_new.jeqdsk
src/jeqdsk/: jeqdsk.py
