[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jeqdsk"
version = "0.2.0"
authors = [
  { name="Chris Marsden"},
]
description = "JEQDSK tokamak equilibrium file reader/writer"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.8",
    "matplotlib>=1.3",
    "freeqdsk>=0.1.0",]

[project.urls]
Source = "https://github.com/chrismarsden7/JEQDSK"
Tracker = "https://github.com/chrismarsden7/JEQDSK/issues"
